[package]
name = "nitro-batch-poster"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
arb-alloy-util = { workspace = true }
alloy-primitives = { workspace = true }
async-trait = { workspace = true }
