[package]
name = "nitro-batch-poster"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
arb-alloy-util = { workspace = true }
alloy-primitives = { workspace = true }
async-trait = { workspace = true }
# L1 posting
alloy-provider = "1"
alloy-transport-http = "1"
alloy-signer = "1"
alloy-signer-local = "1"
# compression
brotli = "3"
