[package]
name = "inbox-bridge"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
alloy-primitives = { workspace = true }
nitro-primitives = { path = "../primitives", version = "0.1.1" }
