[package]
name = "nitro-inbox"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
arb-alloy-util = { workspace = true }
lru = { workspace = true }

nitro-primitives = { path = "../primitives" }
